# Otus-

./: README.md
Homework_2/: move_me_out.cpp
Homework_4/целиком/: astnode.cpp
Lecture 6/: CMakeLists.txt
Lecture 6/0_gnu_make/: .gitignore  Makefile  answer.cpp  answer.h  main.cpp
Lecture 6/1_basic/: CMakeLists.txt
Lecture 6/2_var_n_config/: CMakeLists.txt  answer.cpp  answer.h  config.h.in  main.cpp
Lecture 6/3_lib/: CMakeLists.txt
Lecture 6/3_lib/lib/: CMakeLists.txt  config.h.in  lib.cpp
Lecture 6/3_lib/src/: CMakeLists.txt
Lecture 6/4_lib_install/: CMakeLists.txt
Lecture 6/4_lib_install/src/: CMakeLists.txt  config.h.in  main.cpp
Lecture 6/4_lib_install/sumLib/: CMakeLists.txt  sumLib.cpp
Lecture 6/5_lib_module/: CMakeLists.txt
Lecture 6/5_lib_module/cmake/: FindsumLib.cmake
Lecture 6/6_option/: CMakeLists.txt
Lecture 6/6_option/example/: CMakeLists.txt
Lecture 6/7_compile_features/: CMakeLists.txt  main.cpp
homework 2/: CMakeLists.txt
